- [2026-02-20 23:10] FEAT: 内容风格选项扩充至15个分类，新增"其他"选项支持手动输入自定义风格，封装 StyleSelect 组件复用于三处表单 (Files: frontend/src/App.tsx, static/)
- [2026-02-20 22:55] FIX: 修复 prompt_agent.py 兜底逻辑中残留的 image_styles 变量引用导致 NameError (Files: src/xhs_agent/agent/prompt_agent.py)
- [2026-02-20 19:30] FIX: 删除运营目标时同步取消调度器 pending job 并删除所有关联排期记录 (Files: src/xhs_agent/api/router.py, src/xhs_agent/services/goal_service.py)
- [2026-02-20 16:35] FEAT: 笔记图片风格统一化——整篇笔记只使用一种视觉风格（photo 或 poster），禁止混排；text_service SYSTEM_PROMPT 改为为整篇笔记决定统一风格；prompt_agent 所有图片只从同类模板中选不同子模板 (Files: src/xhs_agent/services/text_service.py, src/xhs_agent/agent/prompt_agent.py, src/xhs_agent/api/schemas.py, src/xhs_agent/agent/xhs_agent.py)
- [2026-02-20 16:30] CHORE: 从所有 git 历史中删除 .env 文件，将 log/ 目录加入 .gitignore (Files: .gitignore)
- [2026-02-20 18:10] FEAT: 日志补充完整提示词输出——所有 AI 请求（TextService/PromptAgent/ManagerAI）的 system_prompt 和 user_prompt 均写入 DEBUG 日志；get_user_all_notes 原始返回数据写入 DEBUG 日志 (Files: src/xhs_agent/services/text_service.py, src/xhs_agent/agent/prompt_agent.py, src/xhs_agent/services/manager_service.py, src/xhs_agent/services/upload_service.py)
- [2026-02-20 18:00] FIX: 修复 manager_service.py 硬编码模型名 "claude-opus-4-6" 导致 /api/goals/{id}/plan 500 错误，改为从配置读取 text_model；屏蔽 urllib3 DEBUG 日志噪音 (Files: src/xhs_agent/services/manager_service.py, main.py)
- [2026-02-20 17:55] FIX: 屏蔽 aiosqlite DEBUG 日志（每次 SQL 操作产生大量低价值输出），设为 WARNING 级别 (Files: main.py)
- [2026-02-20 16:40] FIX: 修复 middleware.py 中 logging.basicConfig() 抢占 root logger 导致文件日志失效的问题；HTTP 请求日志降为 DEBUG（body 详情只写文件），终端只显示简洁一行 INFO；goal_service.py 接入 prompt_agent，补充各阶段 DEBUG 日志 (Files: src/xhs_agent/middleware.py, src/xhs_agent/services/goal_service.py)